--- a/powerss.html
+++ b/powerss.html
@@ -27,7 +27,7 @@
 
 </table>
 <br>
-<form>
+<form method="post" action="index.html">
   <label>Suggest new powers</label>
   <input type="text" name="">
   <input type="submit">
